# data

./: LICENSE  README  build.sbt  data.cabal  provider.properties
project/: Build.scala
src/: SimpleClient.hs  SpiritService.hs
src/main/scala/: Global.scala
src/main/scala/org/scoding/: Aggregator.scala  App.scala  NewsActor.scala  SpiritException.scala  SpiritMessage.scala  SpiritService.scala  TestData.scala
test-oauth/: .cache  README  build.sbt
test-oauth/src/main/scala/isamal/: OAuthClient.scala
test-oauth/src/main/scala/org/scoding/: OAuthTestApp.scala
