Name:                data
Version:             0.1
Synopsis:            RESTful data service for spirit apps
Homepage:            http://pads.fh-schmalkalden.de/spirit.html
License:             BSD3
License-file:        LICENSE
Author:              Oliver Braun
Maintainer:          ob@obraun.net
Category:            Misc
Build-type:          Simple
Cabal-version:       >=1.2

Executable spiritservice
  hs-source-dirs:    src
  Main-is:           SpiritService.hs
  Build-depends:     base >= 4.2 && < 5,
                     blaze-builder,
                     http-enumerator,
                     unordered-containers >= 0.1.4 && < 0.1.5
  ghc-options:       -Wall -fno-warn-unused-do-bind -O2

Executable simpleclient
  hs-source-dirs:    src
  Main-is:           SimpleClient.hs
  Build-depends:     base >= 4.2 && < 5,
                     bytestring,
                     unordered-containers,
                     enumerator,
                     text,
                     transformers,
                     aeson >= 0.4 && < 0.5,
                     attoparsec-enumerator,
                     http-types,
                     wai,
                     warp
  ghc-options:       -Wall -fno-warn-unused-do-bind -O2
